--- a/chef-repo/cookbooks/apache/templates/default/custom.erb
+++ b/chef-repo/cookbooks/apache/templates/default/custom.erb
@@ -16,6 +16,7 @@
         AllowOverride None
         Order allow,deny
         allow from allow
+        Require all granted
     </Directory>
     
 </VirtualHost>
